[gd_scene load_steps=2 format=3 uid="uid://bhn4indokfq4u"]

[ext_resource type="Script" uid="uid://dn8qtrl6yf1r5" path="res://assets/player/ui/powerup_ui_element.gd" id="1_sjtvo"]

[node name="PowerupUIElement" type="Panel"]
custom_minimum_size = Vector2(300, 0)
size_flags_vertical = 3
script = ExtResource("1_sjtvo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PowerupName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "POWERUP NAME"
horizontal_alignment = 1

[node name="PowerupDescription" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
text = "POWERUP DESCRIPTION
LINE 2
LINE 3"
autowrap_mode = 3

[node name="Button" type="Button" parent="MarginContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 8
text = "Select"

[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
